infrastructure/demo-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-api
  namespace: demo

spec:
  parentRefs:
    - name: kong-gateway
      namespace: kong

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: demo-api
          port: 80
